--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,7 +31,7 @@ Author URL: http://w3layouts.com
                     </h3>
                     <p class="banner-sub">Active Learning, Expert Teachers & Safe Environment</p>
                     <div class="d-flex align-items-center buttons-banner">
-                        <a class="btn btn-style mt-lg-5 mt-4">Admission Now</a>
+                        <a th:href="@{/contact}"  class="btn btn-style mt-lg-5 mt-4">Admission Now</a>
                     </div>
                 </div>
                 <div class="col-md-6 right-banner-2 text-end position-relative mt-md-0 mt-5">
@@ -114,7 +114,7 @@ Author URL: http://w3layouts.com
                     <li><i class="fas fa-check-circle"></i>Access more than 100K online courses</li>
                     <li><i class="fas fa-check-circle"></i>Traditional Academies</li>
                 </ul>
-                <a class="btn btn-style mt-5">Apply Now</a>
+                <a th:href="@{/contact}" class="btn btn-style mt-5">Apply Now</a>
             </div>
         </div>
     </div>
@@ -131,12 +131,12 @@ Author URL: http://w3layouts.com
         <div class="row content23-col-2 text-center">
             <div class="col-md-6">
                 <div class="content23-grid content23-grid1">
-                    <h4><a>Expert Teachers</a></h4>
+                    <h4><a th:href="@{/about}">Expert Teachers</a></h4>
                 </div>
             </div>
             <div class="col-md-6 mt-md-0 mt-4">
                 <div class="content23-grid content23-grid2">
-                    <h4><a>Safe Environment</a></h4>
+                    <h4><a th:href="@{/about}">Safe Environment</a></h4>
                 </div>
             </div>
         </div>
@@ -322,7 +322,7 @@ Author URL: http://w3layouts.com
             </div>
         </div>
         <div class="text-center mt-sm-5 mt-4 pt-sm-0 pt-1">
-            <a class="btn btn-style btn-style-secondary mt-sm-3">
+            <a th:href="@{/courses}" class="btn btn-style btn-style-secondary mt-sm-3">
                 Browse more courses</a>
         </div>
     </div>
